--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@mui/material": "^7.1.0",
+    "@mui/x-data-grid": "^8.3.1",
+    "@mui/x-date-pickers": "^8.3.1",
+    "dayjs": "^1.11.13",
     "firebase": "^11.8.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
